# rest_api_tutorial

./: .flaskenv  .gitignore  Procfile  pyproject.toml  pyrightconfig.json  requirements.txt
src/: data.db  rest.py
src/MyFlask/: __init__.py
src/app/: __init__.py
src/appp/: __init__.py
src/model/: __init__.py  item.py  store.py  user.py
src/resources/: __init__.py  item.py  store.py  user.py
src/schema/: __init__.py  item.py  store.py  user.py
src/services/: __init__.py  database.py  security.py
src/swagger/item/: delete.yaml  get.yaml  post.yaml  put.yaml
src/swagger/items/: get_items.yaml
src/swagger/store/: delete.yaml  get.yaml  post.yaml
src/swagger/stores/: get.yaml
src/swagger/user/: post.yaml
src/swagger/userLogin/: post.yaml
tests/: test_rest.py
