[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1"
flasgger = "^0.9.3"
marshmallow = "^3.2"
webargs = "^5.5"
flask-env = "^2.0"
flask-dotenv = "^0.1.2"
python-dotenv = "^0.10.3"
flask-jwt = "^0.3.2"
flask-sqlalchemy = "^2.4"
gunicorn = "^19.9.0"
psycopg2 = "^2.8.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
bpython = "^0.18.0"
mypy = "^0.730.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
